# SimpleCPX

./: CMakeLists.txt  GPX.h  README.md  SimpleCPXParser.c  SimpleCPXParser.h  SimpleCPXWriter.h  Track.h  Track_Seg.h  White_House_Kremlin_Track.gpx  main  programmers.xml
src/: GPX.h  Location.h  SimpleCPXParser.c  SimpleCPXParser.h  SimpleCPXWriter.c  SimpleCPXWriter.h  Track.h  Track_Seg.h  Waypoint.h  main.c  t.h
